# AlgoRoyale

./: .coverage  .gitignore  .gitmodules  BUILD_PLAN.md  CODE_REVIEW.md  README.md  app_run.py  portfolio_optimizations.py  pyproject.toml  requirements.txt
.VSCodeCounter/2025-09-18_20-00-11/: details.md  diff-details.md  diff.md  diff.txt  results.csv  results.json  results.md  results.txt
app/: __init__.py  app.py
config/: __init__.py  config.ini  config.py  db_config.py
data/: __init__.py  data_fetch.py  data_stock_data.py
data/processed/: __init__.py
db/: db.py  init_db.py  schema.sql  setup.py
db/dao/: base_dao.py  signal_dao.py  trade_dao.py
logger/: log_config.py  logger_singleton.py
mocked_path/: opt.json  test_opt.json
models/: ml_model.py  strategy.py
not_in_use/: config_read.py  config_use.py  db.py
scripts/: __init__.py  add_file_headers.py  create_test_directory.py  import_helper.py  mirror_watcher.py  setup_database.py
secrets.example/: env_secrets_dev_integration.ini.example  env_secrets_prod_paper.ini.example
src/: app.py
src/algo_royale/: __init__.py
src/models/: __init__.py
src/routes/: indicator_routes.py  news_sentiment_routes.py  stock_data_routes.py  trade_routes.py  trade_signal_routes.py
src/service/: indicator_service.py  news_sentiment_service.py  stock_data_service.py  trade_service.py  (+1 more)
tests/: test_app.py  test_app_run.py  test_control_server.py  test_portfolio_backtest_executor.py  test_signal_backtest_evaluator.py
trading/: __init__.py  trade_logger.py
utils/: generate_src_hierarchy.py  helper.py
(+2053 files in other folders)
