[tool.poetry]
name = "AlgoRoyale"
version = "0.1.0"
description = ""
authors = ["Zakaraya Ashour <ashourz@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
alpaca-trade-api = "^1.0.5"
pandas = "^1.3.0"
numpy = "^1.21.0"
scikit-learn = "^0.24.2"
matplotlib = "^3.4.3"
psycopg2 = "^2.9.1"
tensorflow = "^2.5.0"
requests = "^2.25.1"

[tool.poetry.dev-dependencies]
# pytest = "^6.2"
watchdog = "^2.1.0"

[tool.poetry.scripts]
watch = "scripts.mirror_watcher:start_watcher"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
